Update args to set 6 months for dates if not pass in the cli

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-/myvenv/
 __pycache__
 /next*
 /tweetlog
 /twitter_credentials.py
 /twitter_credentials.json
 *.swp
+campsitechecker/
+CAMP/
+cron.log
